--- a/VlimsApp/ClientApp/src/index.html
+++ b/VlimsApp/ClientApp/src/index.html
@@ -8,6 +8,8 @@
   <!--<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script> -->
+
 </head>
 <body>
   <app-root></app-root>
